@@ -422,8 +422,7 @@ done
 
 echo "======================================== symbol-GC tests ..."
 $compile symbolgc-tests.scm
-# Currently disabled, because this may leave 1 symbol unreclaimed.
-./a.out -:w || echo "*** FAILED ***"
+./a.out -:w
 
 echo "======================================== finalizer tests ..."
 $interpret -s test-finalizers.scm
