@@ -8,6 +8,8 @@
     provide the desired performance.
   - Port directionality has been generalized from a simple input/output
     flag to a bitmap, to allow for multidirectional ports.
+  - Weak symbol GC is faster, simpler, and can now collect all
+    unreferenced symbols instead of a maximum of 997 per major GC.
 
 - Compiler
   - Fixed an off by one allocation problem in generated C code for (list ...).
